--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     height:200px;
     position: absolute;
     top:0;left: 0;
-    /*margin: auto;*/
     font-size: 30px;
     color: #fff;
     text-align: center;
-    line-height: 400px;
+    /*line-height: 400px;*/
     overflow: hidden;
   }
   .boxs{
@@ -47,9 +46,6 @@
   a:nth-child(3){
     background: #E4229A;
   }
-  /*.config{*/
-  /**/
-  /*}*/
 </style>
 
 <body>
@@ -60,9 +56,6 @@
     <a href="#">3</a>
   </div>
 </div>
-<!--<div class="box config">第二屏</div>-->
-<!--<div class="box config">第三屏</div>-->
-<!--<div class="box config">第四屏</div>-->
 </body>
 </html>
 <script>
