--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       })
     }else{
       $(".boxs").css({
-        marginLeft:num*width,
+        marginLeft:-num*width,
         transition:"marigin 1s ease"
       })
     }
